fixed gap in quote

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -238,7 +238,7 @@
     width: 1.3rem;
     aspect-ratio: 1 / 1;
     bottom: 0;
-    transform: rotate(-45deg);
+    transform: rotate(-45deg) translateY(-1px);
     transform-origin: bottom right;
     clip-path: polygon(0% 0%, 0% 100%, 100% 100%);
     z-index: 1;
